--- a/students/templates/students/add.html
+++ b/students/templates/students/add.html
@@ -1,10 +1,10 @@
 {% extends "students/base.html" %}
 
 {% block body %}
-  <h3 class="text-center m-4">Add Student</h3>
+  <h3 class="text-center m-4">Add employee</h3>
   {% if success %}
     <div class="alert alert-success" role="alert">
-      The new student added successfully.
+      The new employee added successfully.
       <a href="{% url 'index' %}" class="alert-link">Go to Home Page.</a>
     </div>
   {% else %}
@@ -12,7 +12,7 @@
       <div class="col-6">
         <div class="card bg-light mb-3">
           <div class="card-header">
-            <i class="fa-solid fa-address-card fa-lg"></i> Student Registration
+            <i class="fa-solid fa-address-card fa-lg"></i> employee Registration
           </div>
           <div class="card-body">
             <form action="{% url 'add' %}" method="POST">
