--- a/students/templates/students/edit.html
+++ b/students/templates/students/edit.html
@@ -1,10 +1,10 @@
 {% extends "students/base.html" %}
 
 {% block body %}
-  <h3 class="text-center m-4">Update Student</h3>
+  <h3 class="text-center m-4">Update employee</h3>
   {% if success %}
     <div class="alert alert-success" role="alert">
-      The student updated successfully.
+      The employee updated successfully.
       <a href="{% url 'index' %}" class="alert-link">Go to Home Page.</a>
     </div>
   {% else %}
@@ -12,7 +12,7 @@
       <div class="col-6">
         <div class="card bg-light mb-3">
           <div class="card-header">
-            <i class="fa-solid fa-pen-to-square fa-lg"></i> Update Student Records
+            <i class="fa-solid fa-pen-to-square fa-lg"></i> Update employee Records
           </div>
           <div class="card-body">
             <form action="" method="POST">
