--- a/students/templates/students/index.html
+++ b/students/templates/students/index.html
@@ -1,13 +1,13 @@
 {% extends "students/base.html" %}
 
 {% block body %}
-<h3 class="m-4">All Students</h3>
+<h3 class="m-4">All Pegawai</h3>
 <div class="row">
   <div class="col-12">
     {% if students %}
     <div class="card bg-light ms-4 me-4 mb-4">
       <div class="card-header">
-        <i class="fa-solid fa-list fa-lg"></i> Student Records
+        <i class="fa-solid fa-list fa-lg"></i> Pegawai Records
       </div>
       <div class="card-body">
         <p class="card-text">
@@ -42,7 +42,7 @@
                           <div class="modal-content">
                             <div class="modal-header">
                               <h5 class="modal-title">
-                                Student: {{ student.nama }}
+                                Pegawai: {{ student.nama }}
                               </h5>
                               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true"></span>
@@ -78,14 +78,14 @@
                           <div class="modal-content">
                             <div class="modal-header">
                               <h5 class="modal-title">
-                                Student: {{ student.nama }}
+                                Pegawai: {{ student.nama }}
                               </h5>
                               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true"></span>
                               </button>
                             </div>
                             <div class="modal-body">
-                              <p>Are you sure you want to delete this student?</p>
+                              <p>Are you sure you want to delete this pegawai?</p>
                             </div>
                             <div class="modal-footer">
                               <form action="{% url 'delete' student.id %}" method="POST">
@@ -107,7 +107,7 @@
       </div>
     </div>
     {% else %}
-      <h5 class="alert alert-primary ms-4 me-4">No Student Records</h5>
+      <h5 class="alert alert-primary ms-4 me-4">No Pegawai Records</h5>
     {% endif %}
   </div>
 </div>
